force-app/main/default/objects/Subscription__c/fields/Podcasting__c.field-meta.xml
<CustomField>
    <fullName>Podcasting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Allows chairperson to create a podcast from a recorded conference.</inlineHelpText>
    <label>Podcasting</label>
    <type>Checkbox</type>
</CustomField>