force-app/main/default/objects/Subscription__c/fields/PortalAdmin__c.field-meta.xml
<CustomField>
    <fullName>PortalAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS
If checked, user has access to the ReadyTalk can login to the Administration Center application to make changes to users and access codes.</description>
    <inlineHelpText>If checked, user has access to the ReadyTalk Administration Center.</inlineHelpText>
    <label>Administration Center Access</label>
    <type>Checkbox</type>
</CustomField>