force-app/main/default/objects/Subscription__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <inlineHelpText>If selected, the access code will be placed on a Web Meeting Pro (25) for 30 days. Add&apos;l web participants audio (over the 1000 inc. mins) and recordings will be charged.</inlineHelpText>
    <label>Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 day free web trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>