force-app/main/default/objects/Subscription__c/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provision</label>
    <type>Checkbox</type>
</CustomField>