force-app/main/default/objects/Subscription__c/fields/ProvisioningEmailSent__c.field-meta.xml
<CustomField>
    <fullName>ProvisioningEmailSent__c</fullName>
    <description>Date and time a provisioning email was sent</description>
    <inlineHelpText>Date a provisioning email was sent.</inlineHelpText>
    <label>Provisioning Email Sent</label>
    <type>DateTime</type>
</CustomField>