force-app/main/default/objects/Subscription__c/fields/Quickstart__c.field-meta.xml
<CustomField>
    <fullName>Quickstart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Provides chairperson with the OPTION to enable/disable Quickstart via the bridge. If enabled, participants will be placed directly into an audio conference without the chairperson logging in.</inlineHelpText>
    <label>Quickstart Allowed</label>
    <type>Checkbox</type>
</CustomField>