force-app/main/default/objects/Subscription__c/fields/Recording_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Recording_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows chairperson to record audio or audio/web conference.</inlineHelpText>
    <label>Recording Allowed</label>
    <type>Checkbox</type>
</CustomField>