force-app/main/default/objects/Subscription__c/fields/Recording_Editing_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Recording_Editing_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS
If it&#39;s okay for the recording editor to be used on this subscription&#39;s recordings, check this box.</description>
    <inlineHelpText>Allows chairperson to edit audio and web recordings in Conference Center.</inlineHelpText>
    <label>Recording Editing Allowed</label>
    <type>Checkbox</type>
</CustomField>