force-app/main/default/objects/Subscription__c/fields/Reference_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID_2__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Add&apos;l Reference ID field. Header and any values will show on rated and unrated CDR.</description>
    <inlineHelpText>Customer supplied reference ID for audio confs. Will export on rated/unrated CDRs.</inlineHelpText>
    <label>Reference ID 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>