force-app/main/default/objects/Subscription__c/fields/Reference_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID_3__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Reference_ID_3  Data Type Text</description>
    <inlineHelpText>Customer supplied reference ID for audio confs. Will export on rated/unrated CDRs.</inlineHelpText>
    <label>Reference ID 3</label>
    <length>35</length>
    <type>Text</type>
</CustomField>