force-app/main/default/objects/Subscription__c/fields/Remote_Control_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Remote_Control_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Allows chairperson (and co-presenters) to grant control of desktop/applications to participants and other presenters.</inlineHelpText>
    <label>Grant Control Allowed</label>
    <type>Checkbox</type>
</CustomField>