force-app/main/default/objects/Subscription__c/fields/Revert_Last_Subscription_Values__c.field-meta.xml
<CustomField>
    <fullName>Revert_Last_Subscription_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revert Last Subscription Values</label>
    <type>Checkbox</type>
</CustomField>