force-app/main/default/objects/Subscription__c/fields/RTD_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>RTD_Last_Used_Date__c</fullName>
    <label>RTD Last Used Date</label>
    <type>Date</type>
</CustomField>