force-app/main/default/objects/Subscription__c/fields/RTD_Total_Times_Used__c.field-meta.xml
<CustomField>
    <fullName>RTD_Total_Times_Used__c</fullName>
    <label>RTD Total Times Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>