force-app/main/default/objects/Subscription__c/fields/Security_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Security_Passcode__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Requires chairperson and participants to enter a security code on the bridge to gain access to an audio conference.</inlineHelpText>
    <label>Security Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No security</fullName>
            </value>
            <value>
                <fullName>Optional security</fullName>
            </value>
            <value>
                <fullName>Mandatory security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>