force-app/main/default/objects/Subscription__c/fields/Selected_Web_Sub_Size__c.field-meta.xml
<CustomField>
    <fullName>Selected_Web_Sub_Size__c</fullName>
    <formula>CASE( Web_Sub_Default_Type__c ,
&apos;Web Meeting Pro (25)&apos;, 25,
&apos;Web Meeting Pro (150)&apos;, 150,
&apos;Webinar (500)&apos;, 500,
&apos;Webinar (150)&apos;, 150,
&apos;Webinar (3000)&apos;, 3000,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates participant size for web subscription/webinars (system populates upon first bill run).</inlineHelpText>
    <label>Selected Web Sub Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>