force-app/main/default/objects/Subscription__c/fields/Send_Kit__c.field-meta.xml
<CustomField>
    <fullName>Send_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>If checked, user will be mailed a ReadyTalk provisioning kit (wallet card, quick reference card, letter).</inlineHelpText>
    <label>Send Kit</label>
    <type>Checkbox</type>
</CustomField>