force-app/main/default/objects/Subscription__c/fields/Send_Provisioning_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Provisioning_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>If checked, chairperson will receive a provisioning email (audio/web access information) upon activation.</inlineHelpText>
    <label>Send Provisioning Email</label>
    <type>Checkbox</type>
</CustomField>