force-app/main/default/objects/Subscription__c/fields/Send_to_GX__c.field-meta.xml
<CustomField>
    <fullName>Send_to_GX__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send to GX</label>
    <type>Checkbox</type>
</CustomField>