force-app/main/default/objects/Subscription__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Ship To Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>