force-app/main/default/objects/Subscription__c/fields/Skype_for_Business_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Skype_for_Business_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this user have Skype for Business enabled on their owner number.</description>
    <label>Skype for Business Enabled?</label>
    <type>Checkbox</type>
</CustomField>