force-app/main/default/objects/Subscription__c/fields/Slide_Presentation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Slide_Presentation_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Allows chairperson (and co-presenter) to upload/push slides and insert/push polls.</inlineHelpText>
    <label>Slide Presentation Allowed</label>
    <type>Checkbox</type>
</CustomField>