force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>If &quot;Active,&quot; indicates that the access code is activated on audio and web systems.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Provisioned</fullName>
                <default>true</default>
                <label>Not Provisioned</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>AddError</fullName>
            </value>
            <value>
                <fullName>UpdateError</fullName>
            </value>
            <value>
                <fullName>DeleteError</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>SyncError</fullName>
            </value>
            <value>
                <fullName>BillingError</fullName>
            </value>
            <value>
                <fullName>SendProvisioningEmail</fullName>
            </value>
            <value>
                <fullName>BillingDeleteError</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Deleting</fullName>
            </value>
            <value>
                <fullName>Restoring</fullName>
            </value>
            <value>
                <fullName>RestoreError</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>