force-app/main/default/objects/Subscription__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <description>If there&apos;s an error message from GX or billing, it will appear here.</description>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>