force-app/main/default/objects/Subscription__c/fields/Subscription_Email__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Email__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Subscription Email</label>
    <type>Email</type>
</CustomField>