force-app/main/default/objects/Subscription__c/fields/Total_First_Organizer_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_First_Organizer_Events__c</fullName>
    <label>Total First Organizer Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>