force-app/main/default/objects/Subscription__c/fields/Trailing_12_Months_Access_Code_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Trailing_12_Months_Access_Code_Revenue__c</fullName>
    <inlineHelpText>Totals the last 12 months of revenue from the access code revenue object</inlineHelpText>
    <label>Trailing 12 Months Access Code Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>