force-app/main/default/objects/Subscription__c/fields/Trailing_12_Months_Web_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Trailing_12_Months_Web_Minutes__c</fullName>
    <inlineHelpText>Totals the last 12 months of web minutes from the access code revenue object</inlineHelpText>
    <label>Trailing 12 Months Web Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>