force-app/main/default/objects/Subscription__c/fields/Training_Hours_Included__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours_Included__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of training hours included for webinar subscription</inlineHelpText>
    <label>Training Hours Included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>