force-app/main/default/objects/Subscription__c/fields/Training_Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total training hours already used for a webinar sub. To be updated by the AM or one providing training. You can enter fractional hours (ex. 1.5 for an hour and a half)</inlineHelpText>
    <label>Training Hours Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>