force-app/main/default/objects/Subscription__c/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <description>Trial End Date</description>
    <inlineHelpText>Date that the 30-day free trial period ends. (Populated by system).</inlineHelpText>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>