force-app/main/default/objects/Subscription__c/fields/Using_A_Connectivity_Tool__c.field-meta.xml
<CustomField>
    <fullName>Using_A_Connectivity_Tool__c</fullName>
    <formula>IF((Android_App_Last_Used_Date_Count__c &gt;0 || Google_Plug_In_Last_Used_Date_Count__c &gt;0 ||  iOS_App_Last_Used_Date_Count__c&gt;0 ||  Lync_Plug_In_Last_Used_Date_Count__c&gt;0 ||  Outlook_Plugin_Last_Used_Date_Count__c&gt;0 ||  Quick_Launcher_Last_Used_Date_Count__c&gt;0 ||  RTD_Last_Used_Date_Count__c &gt;0), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Using A Connectivity Tool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>