force-app/main/default/objects/Subscription__c/fields/Video_Conferencing_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Video_Conferencing_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Provides chairperson and co-presenters with the ability to share four video feeds simultaneously.</inlineHelpText>
    <label>Video Conferencing Allowed</label>
    <type>Checkbox</type>
</CustomField>