force-app/main/default/objects/Subscription__c/fields/voipAllowed__c.field-meta.xml
<CustomField>
    <fullName>voipAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Allows chairperson (and all participants) to speak and listen to audio over their computer.</inlineHelpText>
    <label>VoIP Allowed</label>
    <type>Checkbox</type>
</CustomField>