force-app/main/default/objects/Subscription__c/fields/Web_Conference_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Web_Conference_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Allows chairperson to host a web conference via Conference Controls. If unchecked, user only has audio privileges in Conference Controls.</inlineHelpText>
    <label>Web Conference Allowed</label>
    <type>Checkbox</type>
</CustomField>