force-app/main/default/objects/Subscription__c/fields/Web_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Web_Start_Date__c</fullName>
    <description>Web Subscription Start Date</description>
    <label>Web Type Start Date</label>
    <type>Date</type>
</CustomField>