force-app/main/default/objects/Subscription__c/fields/Web_Sub_Default_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Sub_Default_Type__c</fullName>
    <description>The default web subscription type for this subscription.</description>
    <inlineHelpText>Select web service for the access code.</inlineHelpText>
    <label>Web Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None (Per-Minute Rates Apply)</fullName>
                <default>true</default>
                <label>None (Per-Minute Rates Apply)</label>
            </value>
            <value>
                <fullName>Web Meeting Pro (25)</fullName>
            </value>
            <value>
                <fullName>Web Meeting Pro (150)</fullName>
            </value>
            <value>
                <fullName>Webinar (150)</fullName>
            </value>
            <value>
                <fullName>Webinar (500)</fullName>
            </value>
            <value>
                <fullName>Webinar (3000)</fullName>
            </value>
            <value>
                <fullName>Web Meeting</fullName>
            </value>
            <value>
                <fullName>Unlimited Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>