force-app/main/default/objects/Subscription__c/fields/Web_Subscription_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Web_Subscription_Renewal_Date__c</fullName>
    <description>Web Subscription Renewal Date</description>
    <inlineHelpText>If account is billed annually, the system will populate this field with the last day of the annual period for the access code.</inlineHelpText>
    <label>Web Subscription Renewal Date</label>
    <type>Date</type>
</CustomField>