force-app/main/default/objects/Subscription__c/fields/Web_Subscription_Size__c.field-meta.xml
<CustomField>
    <fullName>Web_Subscription_Size__c</fullName>
    <label>Web Subscription Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>