force-app/main/default/objects/Subscription__c/fields/Webcasting_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Webcasting_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webcasting Enabled?</label>
    <type>Checkbox</type>
</CustomField>