force-app/main/default/objects/Subscription__c/fields/Webcasting_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Webcasting_Login_URL__c</fullName>
    <label>Webcasting Login URL</label>
    <type>Url</type>
</CustomField>