force-app/main/default/objects/Subscription__c/fields/Webcasting_Password__c.field-meta.xml
<CustomField>
    <fullName>Webcasting_Password__c</fullName>
    <label>Webcasting Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>