force-app/main/default/objects/Subscription__c/fields/Webcasting_Platform__c.field-meta.xml
<CustomField>
    <fullName>Webcasting_Platform__c</fullName>
    <label>Webcasting Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INXPO</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
                <default>true</default>
                <label>TalkPoint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>