force-app/main/default/objects/Subscription__c/fields/Webcasting_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Webcasting_User_Name__c</fullName>
    <label>Webcasting User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>