force-app/main/default/objects/Subscription__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Required if country = US or Canada</inlineHelpText>
    <label>Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>