force-app/main/default/objects/Subscription__c/recordTypes/Active.recordType-meta.xml
<RecordType>
    <fullName>Active</fullName>
    <active>true</active>
    <description>When subscription is provisioned, it is of this record type</description>
    <label>Active</label>
</RecordType>