force-app/main/default/objects/Subscription__c/recordTypes/Deleted.recordType-meta.xml
<RecordType>
    <fullName>Deleted</fullName>
    <active>true</active>
    <description>Use this record type when the subscription is deleted</description>
    <label>Deleted</label>
</RecordType>