force-app/main/default/objects/Subscription__c/recordTypes/Error.recordType-meta.xml
<RecordType>
    <fullName>Error</fullName>
    <active>true</active>
    <description>If there was an error in provisioning the subscription, then it is of this record type</description>
    <label>Error</label>
</RecordType>