force-app/main/default/objects/Subscription__c/recordTypes/NotProvisioned.recordType-meta.xml
<RecordType>
    <fullName>NotProvisioned</fullName>
    <active>true</active>
    <label>Not Provisioned</label>
</RecordType>