force-app/main/default/objects/Subscription__c/recordTypes/Pending.recordType-meta.xml
<RecordType>
    <fullName>Pending</fullName>
    <active>true</active>
    <description>When the provisioning process is pending, this is the record type to use</description>
    <label>Pending</label>
</RecordType>