force-app/main/default/objects/Subscription__c/validationRules/Access_Code_May_Not_start_with_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Access_Code_May_Not_start_with_0</fullName>
    <active>true</active>
    <errorConditionFormula>And (
LEFT(Name, 1) = &quot;0&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot; )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Access code may not start with a zero.</errorMessage>
</ValidationRule>