force-app/main/default/objects/Subscription__c/validationRules/Access_Code_Must_be_7_digits_in_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Access_Code_Must_be_7_digits_in_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( 
LEN( Name ) &lt;&gt; 7, 
NOT(CONTAINS(&quot;0123456789&quot;, LEFT( Name , 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Name , 2, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Name , 3, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Name , 4, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Name , 5, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Name , 6, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Name , 7, 1)))
),  $User.Id &lt;&gt;&#39;00550000000yfEe&#39;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot; )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Access Code must be 7 digits.</errorMessage>
</ValidationRule>