force-app/main/default/objects/Subscription__c/validationRules/Card_Name_30_Char_Limit_If_Send_Kit_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_Name_30_Char_Limit_If_Send_Kit_True</fullName>
    <active>true</active>
    <errorConditionFormula>AND(len(Card_Name__c) &gt; 30, $User.Id&lt;&gt;&#39;00550000000yfEe&#39;, Send_Kit__c =true)</errorConditionFormula>
    <errorDisplayField>Card_Name__c</errorDisplayField>
    <errorMessage>Subscription Card Name must be less than 30 characters if Send Kit Checkbox is checked</errorMessage>
</ValidationRule>