force-app/main/default/objects/Subscription__c/validationRules/Dont_Alter_Access_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Alter_Access_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
    ISCHANGED(Name),
    RecordTypeId = &apos;012500000000uT1&apos;,
    $User.Id &lt;&gt;&apos;00550000000yfEe&apos;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot; 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You may not change the access code for an active subscription</errorMessage>
</ValidationRule>