force-app/main/default/objects/Subscription__c/validationRules/Dont_change_passcode.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_change_passcode</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(editing__c = &quot;0&quot; , editing__c = &quot;&quot;),
 ISCHANGED( Passcode__c ) ,
$Profile.Name &lt;&gt; &quot;System Admin API Only&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot; 
)</errorConditionFormula>
    <errorDisplayField>Passcode__c</errorDisplayField>
    <errorMessage>Passcode must be changed directly with Level 3.</errorMessage>
</ValidationRule>