force-app/main/default/objects/Subscription__c/validationRules/Number_of_Audio_Ports_300.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Audio_Ports_300</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Audio_subscription_size__c , &quot;300&quot;), 
$UserRole.Name &lt;&gt; &quot;ReadyTalk Event Manager&quot;,
$UserRole.Name &lt;&gt; &quot;ReadyTalk Customer Care&quot;,
$UserRole.Name &lt;&gt; &quot;Care &amp; Support&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Admin API Only&quot;)</errorConditionFormula>
    <errorDisplayField>Audio_subscription_size__c</errorDisplayField>
    <errorMessage>Only users in the ReadyTalk, Event Services, Event Coordinator or Customer Care role can select 300.</errorMessage>
</ValidationRule>