force-app/main/default/objects/Subscription__c/validationRules/Passcode_From_AccessCode_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Passcode_From_AccessCode_Rule</fullName>
    <active>true</active>
    <description>The passcode can not be just a sub sequence of the access code anchored on the right most digit.</description>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &quot;System Admin API Only&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot; ,
  Passcode__c = RIGHT(Name, LEN(Passcode__c))
)</errorConditionFormula>
    <errorDisplayField>Passcode__c</errorDisplayField>
    <errorMessage>Passcode does not meet provisioning requirements. Please revise.</errorMessage>
</ValidationRule>