force-app/main/default/objects/Subscription__c/validationRules/Passcode_Length_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Passcode_Length_Rule</fullName>
    <active>true</active>
    <description>A passcode must be between 4-9 digits in length</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Admin API Only&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot; ,
 OR(
  OR(
   LEN(Passcode__c) &lt; 4,
   LEN(Passcode__c) &gt; 9
  )
 )
)</errorConditionFormula>
    <errorDisplayField>Passcode__c</errorDisplayField>
    <errorMessage>Passcode does not meet provisioning requirements. Please revise.</errorMessage>
</ValidationRule>